fixed latest posts alignment issues

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -141,11 +141,14 @@ span.meet img {
 }
 
 /* Post Section CSS Start */
-
-.posts {
+.posts-main {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+}
+.posts {
+  text-align: center;
+  margin: 40px;
 }
 
 .post-card {
@@ -156,12 +159,16 @@ span.meet img {
     rgba(255, 255, 255, 0.7) 100%
   );
   box-shadow: 0px 5.92334px 37.0209px -1.48084px rgba(51, 67, 104, 0.2);
-  backdrop-filter: blur(5px);
   width: 300px;
   height: 350px;
   padding: 25px;
-  margin: 20px;
   border-radius: 44px;
+  transition: transform .2s;
+  cursor: pointer;
+}
+
+.post-card:hover {
+  transform: scale(1.05);
 }
 
 .post-card-img {
@@ -181,10 +188,11 @@ span.meet img {
   left: 0;
   bottom: 40px;
   font-size: 16px;
-  font-weight: 400;
-  padding: 12px 16px;
+  font-weight: 700;
+  padding: 8px 10px;
   color: #1d1d1d;
   background: #ffffff;
+  border-radius: 0px 10px 10px 0px;
 }
 
 .post-card h5 {
